# ChangeLog for gnome-base/control-center
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.257 2007/11/27 15:32:25 dang Exp $

  27 Nov 2007; Daniel Gryniewicz <dang@gentoo.org>
  control-center-2.20.1.ebuild:
  Add dep on gst-plugins-meta.  Fixes bug #200043

  26 Nov 2007; Markus Rothe <corsair@gentoo.org>
  control-center-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> control-center-2.20.1.ebuild:
  Marking control-center-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  control-center-2.20.1.ebuild:
  alpha/ia64/sparc stable wrt #199740

  21 Nov 2007; Dawid Węgliński <cla@gentoo.org>
  control-center-2.20.1.ebuild:
  Stable on x86 (bug #199740)

  20 Nov 2007; Samuli Suominen <drac@gentoo.org>
  control-center-2.20.1.ebuild:
  amd64 stable wrt #199740

*control-center-2.20.1 (17 Oct 2007)

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +control-center-2.20.1.ebuild:
  bump to 2.20.1

  14 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  control-center-2.16.3.ebuild, control-center-2.18.1.ebuild,
  control-center-2.20.0.1.ebuild:
  fix bug #157944 after reading the sources

*control-center-2.20.0.1 (04 Oct 2007)

  04 Oct 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +files/control-center-2.19.90-no-esd.patch,
  +control-center-2.20.0.1.ebuild:
  Version bump for GNOME 2.20

  22 Sep 2007; Tom Gall <tgall@gentoo.org> control-center-2.18.1.ebuild:
  stable on ppc64
 
  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> control-center-2.18.1.ebuild:
  Stable for HPPA (bug #185823).

  11 Aug 2007; Mart Raudsepp <leio@gentoo.org>
  -files/control-center-2.6.0-remove-pmu.patch,
  -files/control-center-2.14.1-path-fix.patch,
  -control-center-2.14.2.ebuild:
  Removing Gnome 2.14

  11 Aug 2007; Andrej Kacian <ticho@gentoo.org>
  control-center-2.18.1.ebuild: