@@ -4,10 +4,8 @@ AUX control-center-2.18.1-fbsd.patch 464 RMD160 02a401bafc5ec95e8048b064cfd85bdb
 AUX control-center-2.18.1-gnome-doc-utils-fix.patch 370 RMD160 1cee6610e683dbf6f162bd9c7d174f3555f3a435 SHA1 8e26e680fac18bdbec02aaba410c6b029b8071dc SHA256 197eafa5b4d445977b3a878d5642f6c5de621a410dc31524221816e4bf5a1675
 AUX control-center-2.19.90-no-esd.patch 1169 RMD160 ca43e6a2abbf145c7da529dfe39ddfaba659ee45 SHA1 3a6103b3d07ede2c6f5fd2f6600c36abbe816439 SHA256 c32780e50c751234e6e4412fe3a6deaf5635a030553fbe1a61fb19cd47defc98
 DIST control-center-2.18.1.tar.bz2 2150134 RMD160 f3980d2348a699f646d87ec27c61f27057594302 SHA1 4325caeb94de9b77cd57fc210f1ba623458a2aa8 SHA256 3bb1474a6914d5a210a6f21368c48c9c302918a4ab94a5282b84b57ebc432c87
-DIST gnome-control-center-2.20.0.1.tar.bz2 2290108 RMD160 5da149dbd78bb2daaadb4d548cce12561028807c SHA1 62e9439dbfb1e0b174b44590108dd89afb39b999 SHA256 46feb6e00cba24269887ec1d3fce57323d4b3314dfa8ec280c7669c389df0997
 DIST gnome-control-center-2.20.1.tar.bz2 2292719 RMD160 ce5c5a270679f779fbec59aa887aba239b3f1d84 SHA1 6eb9bd032da71ad8dceafddc288bbca6dbc1d6ea SHA256 631d7621584a27a0edc43f05c6e2b45d6c44c1bc570abaa155472ca9b321d4d0
 EBUILD control-center-2.18.1.ebuild 2780 RMD160 4eb42fc4bb3f5012d0338d9e9ce19da34deee2d8 SHA1 8a2f0f1b25b191d49741d7fee5171c26f6324497 SHA256 5e5e84b975a47d43a54d21744d8c52c5fa13db4ef9cefebbc26ee3042da89700
-EBUILD control-center-2.20.0.1.ebuild 2525 RMD160 742afc59a30aed95c56bce13b2d35412801daf19 SHA1 a032d80c935db8814af47e3d890b500e00b81c38 SHA256 c82e71e81b7b84d854364bdd72ae28ca02151555dc2d7191871e7e03aa53665c
-EBUILD control-center-2.20.1.ebuild 2562 RMD160 e2487d32af336c8c867d8b90dbcd983a44350688 SHA1 7f32bc3b1b6756908e030bd6773c4e58535f01b4 SHA256 0a4e0c228a38a70d94e5c8444b744a9d024b910ef1f66595f8bdecc3d2d51b9c
-MISC ChangeLog 34738 RMD160 18e76931c759878e72ec5f853a648fc51598a1b0 SHA1 0637757db6e25628a0566aaa5418ff2c3651eb3a SHA256 b801d2cb6a90cc0f7d3676a686db8c5d0c349c6a99df8b12f39de2aeb661f282
+EBUILD control-center-2.20.1.ebuild 2561 RMD160 2e7be2ee26744fe2c625ffeded1556452feb79aa SHA1 88c2a63c8ab76eda304dac5d6b967f917b4bbe82 SHA256 c681c77af347ba615d55dfb25e248a6392b515e3a01596817eb14ecfd53e5731
+MISC ChangeLog 34848 RMD160 a8f317d5bbc45e3937d7035c87afbfb71e152dc4 SHA1 0dfea29b04ca936d144731b2e8524ff941212639 SHA256 58d13cc729b5029908e202a7c8afb47a4faaae2255ea0ebb5cb5189026bd6ef5
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
