@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.257 2007/11/27 15:32:25 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.258 2007/11/29 05:30:44 jer Exp $
+
+  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> control-center-2.20.1.ebuild:
+  Stable for HPPA (bug #199740).
 
   27 Nov 2007; Daniel Gryniewicz <dang@gentoo.org>
   control-center-2.20.1.ebuild:
